# thecorporation-mono

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  VERSIONING.md
crates/agent-types/: Cargo.toml
crates/agent-types/src/: agent.rs  config.rs  enums.rs  execution.rs  ids.rs  job.rs  lib.rs  log.rs  message.rs  rpc.rs  validated.rs
crates/corp-auth/: Cargo.toml
crates/corp-auth/src/: api_key.rs  error.rs  extractors.rs  jwt.rs  lib.rs  principal.rs
crates/corp-cli/: Cargo.toml
crates/corp-cli/src/: client.rs  config.rs  local.rs  main.rs  output.rs  refs.rs
crates/corp-cli/src/commands/: admin.rs  agents.rs  cap_table.rs  contacts.rs  entities.rs  execution.rs  formation.rs  governance.rs  mod.rs  services.rs  setup.rs  treasury.rs  work_items.rs
crates/corp-core/: Cargo.toml
crates/corp-core/src/: command_registry.rs  ids.rs  lib.rs
crates/corp-core/src/agents/: mod.rs
crates/corp-core/src/auth/: mod.rs
crates/corp-core/src/contacts/: mod.rs
crates/corp-core/src/equity/: cap_table.rs  control_link.rs  exercise.rs  grant.rs  holder.rs  instrument.rs  investor_ledger.rs  legal_entity.rs  mod.rs  position.rs  repurchase.rs  round.rs  rule_set.rs  safe_note.rs  share_class.rs  transfer.rs  types.rs  valuation.rs  vesting.rs
crates/corp-core/src/execution/: intent.rs  mod.rs  obligation.rs  receipt.rs  types.rs
crates/corp-core/src/formation/: document.rs  entity.rs  filing.rs  mod.rs  tax_profile.rs
crates/corp-core/src/governance/: agenda_item.rs  body.rs  capability.rs  meeting.rs  mod.rs  policy.rs  profile.rs  proof.rs  resolution.rs  seat.rs  types.rs  vote.rs
crates/corp-core/src/services/: mod.rs
crates/corp-core/src/treasury/: account.rs  bank_account.rs  distribution.rs  invoice.rs  journal_entry.rs  mod.rs  payment.rs  payroll.rs  reconciliation.rs  types.rs
crates/corp-core/src/work_items/: mod.rs
crates/corp-core/tests/: domain_integration.rs
crates/corp-server/: Cargo.toml
crates/corp-server/src/: error.rs  lib.rs  main.rs  state.rs
crates/corp-server/src/routes/: admin.rs  agents.rs  contacts.rs  equity.rs  execution.rs  formation.rs  governance.rs  health.rs  manifest.rs  mod.rs  next_steps.rs  openapi.rs  services.rs  treasury.rs  validation.rs  work_items.rs
crates/corp-server/tests/: api_lifecycle.rs  cli_formation_workflow.rs  dual_backend.rs  scenario_carta_scale.rs
crates/corp-storage/: Cargo.toml
crates/corp-storage/src/: entity_store.rs  error.rs  git.rs  impls.rs  kv.rs  lib.rs  s3.rs  traits.rs  workspace_store.rs
crates/corp-storage/tests/: git_backend.rs
crates/corp-store/: Cargo.toml
crates/corp-store/src/: branch.rs  corp_store.rs  durable.rs  entry.rs  error.rs  git_protocol.rs  keys.rs  lib.rs  merge.rs  oid.rs  s3_backend.rs  store.rs
crates/corp-store/tests/: docker-compose.integration.yml  integration.rs  integration_s3.rs
crates/git-log-engine/: Cargo.toml
crates/git-log-engine/src/: context.rs  engine.rs  entry.rs  error.rs  index.rs  lib.rs
services/agent-worker/: Cargo.toml  Dockerfile  Dockerfile.runtime  docker-compose.yml
services/agent-worker/runtime/: pi-entrypoint.mjs
services/agent-worker/src/: config.rs  error.rs  lib.rs
services/agent-worker/src/domain/: agent.rs  execution.rs  ids.rs  job.rs  log_entry.rs  message.rs  mod.rs  usage.rs
services/agent-worker/src/redis/: keys.rs  lock.rs  mod.rs  pool.rs  pubsub.rs  queue.rs  rpc.rs  state.rs
services/agent-worker/src/worker/: capacity.rs  consumer.rs  cron.rs  docker.rs  kill.rs  lifecycle.rs  mod.rs  sandbox.rs  secrets.rs  workspace_git.rs
services/api-rs/: ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  build.rs  openapi.json
services/api-rs/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  openapi.rs  validate.rs
services/api-rs/src/domain/: ids.rs  mod.rs
services/api-rs/src/domain/agents/: agent.rs  error.rs  message.rs  mod.rs  resolve.rs  secret_proxy.rs  types.rs
services/api-rs/src/domain/auth/: api_key.rs  claims.rs  error.rs  mod.rs  scopes.rs  ssh_key.rs
services/api-rs/src/domain/billing/: subscription.rs
services/api-rs/src/domain/contacts/: contact.rs  error.rs  mod.rs  notification_prefs.rs  types.rs
services/api-rs/src/domain/equity/: cap_table.rs  control_link.rs  conversion_execution.rs  error.rs  funding_round.rs  fundraising_workflow.rs  grant.rs  holder.rs  instrument.rs  investor_ledger.rs  legal_entity.rs  mod.rs  position.rs  round.rs  rule_set.rs  safe_note.rs  share_class.rs  transfer.rs  transfer_workflow.rs  types.rs  valuation.rs  vesting.rs
services/api-rs/src/domain/execution/: error.rs  (+8 more)
services/api-rs/src/git/: branch.rs  branch_name.rs  commit.rs  error.rs  merge.rs  mod.rs  native_transport.rs  pack.rs  pktline.rs  projection.rs  protocol.rs  repo.rs  signing.rs
services/api-rs/src/routes/: admin.rs  agent_executions.rs  agents.rs  auth.rs  billing.rs  branches.rs  compliance.rs  contacts.rs  equity.rs  execution.rs  formation.rs  git_http.rs  governance.rs  governance_enforcement.rs  llm_proxy.rs  mod.rs  next_steps.rs  projection.rs  references.rs  secret_proxies.rs  secrets_proxy.rs  services.rs  shared.rs  treasury.rs  validation.rs  webhooks.rs  work_items.rs
services/api-rs/src/store/: entity_store.rs  mod.rs  stored_entity.rs  workspace_store.rs
services/api-rs/tests/: api_lifecycle.rs  governance_e2e_correctness.rs  governance_law_props.rs  governance_meeting_e2e.rs  next_steps_e2e.rs  valuation_e2e.rs
services/api-rs/tests/scenarios/: AGENT-COMPUTE-COOP.jsonl  AGENT-MARKETPLACE.jsonl  AGENT-VENTURE-STUDIO.jsonl  APARTMENT-BUILDING.jsonl  AUTONOMOUS-FLEET-OPERATOR.jsonl  CONSTRUCTION-CONTRACTOR.jsonl  CONSULTING-LLC.jsonl  DOWN-ROUND-CRISIS.jsonl  ECOMMERCE-DROPSHIP.jsonl  FAMILY-RESTAURANT.jsonl  FOOD-TRUCK-FLEET.jsonl  FOUNDER-BREAKUP.jsonl  FREELANCE-AGENCY.jsonl  FULL-COVERAGE.jsonl  HOLDING-COMPANY-EMPIRE.jsonl  LLC-TO-CCORP-CONVERSION.jsonl  MULTI-STATE-COMPLIANCE.jsonl  RAPID-SCALING-CHAOS.jsonl  REAL-ESTATE-SYNDICATION.jsonl  SAAS-STARTUP.jsonl  VC-FUND.jsonl  VENDING-MACHINE-NETWORK.jsonl  ZOMBIE-COMPANY-WIND-DOWN.jsonl
(+120 files in other folders)
