[package]
name = "agent-types"
version = "26.3.24"
edition = "2024"
rust-version = "1.85"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5", optional = true, features = ["uuid"] }

[features]
default = []
openapi = ["utoipa"]
