[package]
name = "corp-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for corporate governance - can use local or remote backend"

[[bin]]
name = "corp"
path = "src/main.rs"

[dependencies]
corp-core = { workspace = true }
corp-storage = { workspace = true, features = ["git"] }
corp-auth = { workspace = true }
sha2 = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"

# Output formatting
comfy-table = "7"
colored = "2"
indicatif = "0.17"

# Config
dirs = "6"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
