[package]
name = "corp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Domain models and business logic for corporate governance"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
