[package]
name = "corp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP API server for corporate governance"

[features]
default = ["s3"]
s3 = ["corp-storage/s3"]

[[bin]]
name = "corp-server"
path = "src/main.rs"

[lib]
name = "corp_server"
path = "src/lib.rs"

[dependencies]
corp-core = { workspace = true }
corp-storage = { workspace = true, features = ["git", "kv"] }
corp-auth = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
async-trait = "0.1"
redis = { workspace = true }
sha2 = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tempfile = "3"
chrono = { workspace = true }
