[package]
name = "corp-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Storage abstraction: git, Redis/Valkey, S3 backends"

[features]
default = ["git"]
git = ["dep:gix"]
kv = ["dep:redis"]
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]

[dependencies]
corp-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

# Git backend (optional)
gix = { workspace = true, optional = true }

# KV backend (optional)
redis = { workspace = true, optional = true }

# S3 durable backend (optional)
aws-sdk-s3 = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }

# Content addressing
hex = "0.4"

# SmallVec — used by gix's owned Commit type for parent IDs
smallvec = { version = "1", features = ["const_generics"] }

# Async trait
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
