[package]
name = "corp-store"
version = "26.3.22"
edition = "2024"
rust-version = "1.85"
description = "Valkey-backed git-compatible content-addressed store"

[dependencies]
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
redis = { version = "0.27" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
