[package]
name = "corp-store"
version = "26.3.46"
edition = "2024"
rust-version = "1.85"
description = "Valkey-backed git-compatible content-addressed store"

[features]
default = []
s3 = ["aws-sdk-s3", "aws-config", "tokio"]

[dependencies]
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
redis = { version = "0.27" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"

# S3 durable backend (opt-in via feature flag)
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt"] }
