[package]
name = "git-log-engine"
version = "26.3.8"
edition = "2024"
rust-version = "1.85"
description = "Per-repo JSON-LD log engine for fast git history replay"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
git2 = { version = "0.20", default-features = false }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
