[package]
name = "agent-worker"
version = "26.3.8"
edition = "2024"
rust-version = "1.85"

[lib]
name = "agent_worker"
path = "src/lib.rs"

[[bin]]
name = "agent-worker"
path = "src/bin/worker.rs"

[dependencies]
# Shared types
agent-types = { path = "../../crates/agent-types" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.18"

# Docker — default features (http + pipe) plus rustls for TLS
bollard = { version = "0.18", features = ["rustls"] }

# Git (workspace version control)
git2 = { version = "0.20", default-features = false }

# HTTP client (fetching agent/message from api-rs, secrets proxy)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
envy = "0.4"
dotenvy = "0.15"

# Misc
rand = "0.8"
hex = "0.4"
tokio-util = "0.7"
futures-util = "0.3"
siphasher = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
testcontainers = "0.23"
mockall = "0.13"
wiremock = "0.6"
