[package]
name = "api-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tokio = { version = "1", features = ["full"] }
hyper = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Git storage (replaces PostgreSQL) — no SSH/HTTPS needed, local bare repos only
git2 = { version = "0.20", default-features = false }

# Commit signing — Ed25519 SSH signatures for cryptographic provenance
ssh-key = { version = "0.6", features = ["ed25519", "crypto"] }

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Redis (agent execution queue + state)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.18"

# Encryption (secrets at rest)
fernet = "0.2"

# reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Config
envy = "0.4"
dotenvy = "0.15"

# OpenAPI — spec is built programmatically in src/openapi.rs
# utoipa annotations can be added incrementally for full schema generation

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
tempfile = "3"
