[package]
name = "api-rs"
version = "26.3.24"
edition = "2024"
rust-version = "1.89"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tokio = { version = "1", features = ["full"] }
hyper = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Git storage (replaces PostgreSQL) — no SSH/HTTPS needed, local bare repos only
git2 = { version = "0.20", default-features = false }

# Commit signing — Ed25519 SSH signatures for cryptographic provenance
ssh-key = { version = "0.6", features = ["ed25519", "crypto"] }

# Shared agent types (IDs, enums, config structs)
agent-types = { path = "../../crates/agent-types", features = ["openapi"] }

# Content-addressed Valkey store (alternative storage backend)
corp-store = { path = "../../crates/corp-store" }

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
hmac = "0.12"

# Error handling
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Redis (agent execution queue + state)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.18"

# Encryption (secrets at rest)
fernet = "0.2"
openssl = { version = "0.10", optional = true, features = ["vendored"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Config
envy = "0.4"
dotenvy = "0.15"
typst = "0.14"
typst-pdf = "0.14"
typst-syntax = "0.14"
comemo = "0.5"
typst-assets = { version = "0.14", features = ["fonts"] }

# OpenAPI — auto-generated from code via utoipa derive macros
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }

[features]
default = []
vendored-openssl = ["openssl"]

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
tempfile = "3"
